very basic impl for update pref and get pref
